--- a/src/popup.html
+++ b/src/popup.html
@@ -7,7 +7,7 @@
         <h3 id="subtitle">Coded by Kai Sereni in February 2023.</h3>
         <p id="text">To read all of this browser extension's documented code, go to the GitHub.</p>
         <center>
-            <a href="github.com">
+            <a href="https://github.com/KaiCACO/FixSteelhead">
                 <img src="resources/github-icon.png" id="github-icon">
             </a>
         </center>
