--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
     <body id="body">
         <h1 id="title">This browser extension fixes Steelhead Connect's ugly UI.</h1>
         <h3 id="subtitle">Coded by Kai Sereni in February 2023.</h3>
-        <p id="text">To read all of this browser extension's documented code, go to the GitHub.</p>
+        <p id="text">To read all of this browser extension's documented code, go to the GitHub. If the extension isn't working, reload the page.</p>
         <center>
             <a href="https://github.com/KaiCACO/FixSteelhead" target="_blank">
                 <img src="resources/github-icon.png" id="github-icon">
