--- a/src/popup.html
+++ b/src/popup.html
@@ -14,7 +14,7 @@
         <div id="home" class="tab">
             <h1 id="title">This browser extension fixes Steelhead Connect's ugly UI.</h1>
             <h3 id="subtitle">Coded by Kai Sereni in February 2023.</h3>
-            <p id="text">To read all of this browser extension's documented code, go to the GitHub. If the browser extension ever stops working, reload the page.</p>
+            <p id="text">To read all of this browser extension's documented code, go to the GitHub.</p>
             <center>
                 <a href="https://github.com/KaiCACO/FixSteelhead" target="_blank">
                     <img src="resources/github-icon.png" id="github-icon" alt="github-icon">
@@ -22,10 +22,12 @@
             </center>
         </div>
         <div id="appearance" class="tab">
-            <p>Appearance tab</p>
+            <h2>This page will allow you to customize the theme and colors!</h2>
+            <p>Coming Soon</p>
         </div>
         <div id="defaults" class="tab">
-            <p>Defaults tab</p>
+            <h2>This page will allow you to set default search assignment filters and time range whenever you load the page!</h2>
+            <p>Coming Soon</p>
         </div>
     <script type="text/javascript" src="resources/popup.js"></script>
     </body>
