--- a/src/popup.html
+++ b/src/popup.html
@@ -21,13 +21,21 @@
                 </a>
             </center>
         </div>
-        <div id="appearance" class="tab">
-            <h2>This page will allow you to customize the theme and colors!</h2>
+        <div id="defaults" class="tab">
+            <h2>Default filters</h2>
             <p>Coming Soon</p>
         </div>
-        <div id="defaults" class="tab">
-            <h2>This page will allow you to set default search assignment filters and time range whenever you load the page!</h2>
-            <p>Coming Soon</p>
+        <div id="appearance" class="tab">
+            <h2>Customize appearance</h2>
+            <center>
+                <div id="theme-switch">
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                    <h3>Theme</h3>
+                </div>
+            </center>
         </div>
     <script type="text/javascript" src="resources/popup.js"></script>
     </body>
