--- a/src/popup.html
+++ b/src/popup.html
@@ -30,7 +30,7 @@
             <center>
                 <div id="theme-switch">
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id="theme-checkbox">
                         <span class="slider"></span>
                     </label>
                     <h3>Theme</h3>
