--- a/src/popup.html
+++ b/src/popup.html
@@ -14,7 +14,7 @@
         <div id="home" class="tab">
             <h1 id="title">This browser extension fixes Steelhead Connect's ugly UI.</h1>
             <h3 id="subtitle">Coded by Kai Sereni in February 2023.</h3>
-            <p id="text">To read all of this browser extension's documented code, go to the GitHub.</p>
+            <p id="text">To read all of this browser extension's documented code, or leave feedback for the extension, go to the GitHub.</p>
             <center>
                 <a href="https://github.com/KaiCACO/FixSteelhead" target="_blank">
                     <img src="resources/github-icon.png" id="github-icon" alt="github-icon">
