--- a/src/popup.html
+++ b/src/popup.html
@@ -15,7 +15,8 @@
             <h1 id="title">This browser extension fixes Steelhead Connect's ugly UI.</h1>
             <h3 id="subtitle">Coded by Kai Sereni in February 2023.</h3>
             <center>
-                <a style="position: absolute; transform: translateX(-80px)" href="https://chromewebstore.google.com/detail/fix-steelhead-frontend/cnjgchceepjloehgdimhmgmihbjjnbma/reviews">Click here to leave a review :3</a>
+                <a href="https://chromewebstore.google.com/detail/fix-steelhead-frontend/cnjgchceepjloehgdimhmgmihbjjnbma/reviews">Click here to leave a review :3</a><br>
+                <a href="mailto:kaisereni@cascadesacademy.org">If you find a bug, let me know</a>
             </center>
             <p id="text">To read all of this browser extension's documented code, go to the GitHub.</p>
             <center>
